--- a/bounce.html
+++ b/bounce.html
@@ -18,7 +18,7 @@
         $(document).ready(function() {
 
             $("#target").click(function(){
-               $("#target").effect( "bounce", {times:3}, 300 );
+               $(this).effect( "bounce", {times:3}, 300 );
             });
 
          });
