--- a/bounce.html
+++ b/bounce.html
@@ -3,33 +3,22 @@
   <head>
         <meta charset="utf-8">
       	<meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>jQuery UI Effects - Bounce Effect</title>
+        <title>jQuery UI Effects - Draggable Effect</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-        <style>
-        .panel { width: 200px; margin-top: 100px;}
-        </style>
+        <style>.panel { width: 200px; margin-top: 100px;}</style>
 
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
       	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-        <script type="text/javascript">
-        $(document).ready(function() {
-
-            $("#target").click(function(){
-               $(this).effect( "bounce", {times:3}, 300 );
-            });
-
-         });
-        </script>
+        <script src="draggable.js"></script>
   </head>
   <body>
-      <div class="container" id="target">
+      <div class="container draggable" id="target">
         <div class="panel panel-default" style="max-height: 20;">
-            <div class="panel-heading">Bounce Effect</div>
+            <div class="panel-heading">Draggable</div>
             <div class="panel-body">
-              This is the bounce effect. Please click here and shake it!
+              This is the draggable effect. Please click here and grab it!
             </div>
         </div>
       </div>
